fix(css): changed padding to stop overlapping with the navbar

--- a/pages/registerPage/assets/css/register.css
+++ b/pages/registerPage/assets/css/register.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 60px 20px;
+    padding-top: 135px;
 }
 
 .register-box {
